--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -11,10 +11,6 @@ html {
   box-sizing: inherit;
 }
 
-/*
- * Global layout stuff
- */
-
 body {
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
@@ -24,21 +20,12 @@ body {
 
 main.container {
   margin: auto;
-  /* margin-left: 33.33%;
-  margin-right: 33.33%; */
-  /* margin-bottom: 50%; */
-  /* padding-bottom: 100%; */
-  /* padding-top: 1%; */
-  width: 400px;
-  /* height: 100%; */
-
-  /* z-index: 1; */
-
+  width: 33.33%;
+  height: 100%;
 }
 
-
 section.spacer {
-  padding-top: 18%;
+  padding-top: 20%;
   background-color: #003E7E;
   z-index: 3;
   width: 100%;
@@ -46,12 +33,16 @@ section.spacer {
 
 section.new-tweet {
   background-color: #0059b3;
-  border-radius: 25px;
+  /* border-radius: 3px; */
   color: #ffffff;
   padding-top: 3%;
   padding-bottom: 6%;
-  /* border-top-left-radius: inherit;
-  border-top-right-radius: inherit; */
+  border: 1px solid #ffffff;
+}
+
+section.new-tweet:hover {
+  background-color: #003E7E;
+  color: #ffffff;
   border: 1px solid #38444d;
 }
 
@@ -66,11 +57,20 @@ h2.composeTitle {
 }
 
 textarea.tweetText {
-
+  word-wrap: break-word;
   width: 94%;
   margin-left: 3%;
 
 }
+
+textarea.tweetText:hover {
+  border-color: #990000;
+  width: 94%;
+  margin-left: 3%;
+  border: 2px solid #990000;
+
+}
+
 button.button {
   margin-right: 5%;
   margin-left: 3%;
@@ -80,16 +80,15 @@ button.button {
   background-color: #003E7E;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
-  border-radius: inherit;
+  border-radius: 25px;
   border: 1px solid #38444d;
   color: #FFFFFF;
   text-align: center;
-  font-size: 100%;
+  font-size: 90%;
   padding: 6px;
-  width: 18%;
+  width: 80px;
   transition: all 0.5s;
   cursor: pointer;
-  /* margin: 5px; */
 }
 
 .button span {
@@ -100,6 +99,7 @@ button.button {
 }
 
 .button span:after {
+  color: #990000;
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -109,6 +109,7 @@ button.button {
 }
 
 .button:hover span {
+  color: #990000;
   padding-right: 25px;
 }
 
@@ -120,4 +121,83 @@ button.button {
 #count {
   float: right;
   margin-right: 4%;
+}
+
+.negcountercolor {
+    color: #990000;
+}
+
+section.tweets {
+  color: white;
+  margin-top: 3%;
+  background-color: #003E7E;;
+  /* border-radius: 3px; */
+  padding-bottom: 7%;
+  word-wrap: break-word;
+}
+
+section.tweets:hover {
+  background-color: #003E7E;
+  color: #ffffff;
+
+}
+
+article.tweet {
+background-color: #0059b3;
+/* margin-bottom: 3%; */
+border-left: 1px solid #ffffff;
+border-right: 1px solid #ffffff;
+border-top: 1px solid #ffffff;
+/* border-radius: 4px; */
+}
+
+article.tweet:hover {
+background-color: #003E7E;
+border-left: 1px solid #38444d;
+border-right: 1px solid #38444d;
+border-top: 1px solid #38444d;
+}
+
+header.tweetHeader {
+  display: flex;
+  margin-top: 1%;
+}
+
+div.avatar {
+  margin: 1%;
+  /* width: 25px; */
+}
+
+div.userName {
+  font-size: 120%;
+  margin-left: 1%;
+  margin-top: 5%;
+}
+
+p.userHandle {
+  margin: 2%;
+  justify-self: flex-end;
+  margin-left: auto;
+}
+
+p.tweetText {
+  word-wrap: break-word;
+  width: 94%;
+  margin-left: 3%;
+  margin-top: 3%;
+}
+
+footer {
+  padding-bottom: 2%;
+}
+
+article.footer {
+  display: flex;
+
+}
+
+h5.footer {
+  padding-left: 1%;
+  margin-bottom: 0;
+  margin-top: 10%;
 }
