--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,7 +33,6 @@ section.spacer {
 
 section.new-tweet {
   background-color: #0059b3;
-  /* border-radius: 3px; */
   color: #ffffff;
   padding-top: 3%;
   padding-bottom: 6%;
@@ -81,7 +80,6 @@ button.button {
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
   border-radius: 25px;
-  border: 1px solid #38444d;
   color: #FFFFFF;
   text-align: center;
   font-size: 90%;
@@ -89,6 +87,7 @@ button.button {
   width: 80px;
   transition: all 0.5s;
   cursor: pointer;
+  border: 1px solid #990000;
 }
 
 .button span {
@@ -131,7 +130,6 @@ section.tweets {
   color: white;
   margin-top: 3%;
   background-color: #003E7E;;
-  /* border-radius: 3px; */
   padding-bottom: 7%;
   word-wrap: break-word;
 }
@@ -139,16 +137,13 @@ section.tweets {
 section.tweets:hover {
   background-color: #003E7E;
   color: #ffffff;
-
 }
 
 article.tweet {
 background-color: #0059b3;
-/* margin-bottom: 3%; */
 border-left: 1px solid #ffffff;
 border-right: 1px solid #ffffff;
 border-top: 1px solid #ffffff;
-/* border-radius: 4px; */
 }
 
 article.tweet:hover {
@@ -165,7 +160,6 @@ header.tweetHeader {
 
 div.avatar {
   margin: 1%;
-  /* width: 25px; */
 }
 
 div.userName {
@@ -193,7 +187,6 @@ footer {
 
 article.footer {
   display: flex;
-
 }
 
 h5.footer {
