--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -195,3 +195,14 @@ h5.footer {
   margin-bottom: 0;
   margin-top: 10%;
 }
+
+img.like {
+  visibility: hidden;
+  float: right;
+}
+
+article.tweet:hover img.like {
+  visibility: visible;
+  float: right;
+  padding-right: 1%;
+}
